<resources>
    <string name="app_name">TaskMaster</string>
    <string name="headerText">Task Master</string>
    <string name="open" />
    <string name="close" />
    <string name="task_title">Task Title</string>
    <string name="task_description">Task Description</string>
    <string name="task_assigned_user">Task Assigned User</string>
    <string name="accepted">Accepted</string>
    <string name="complete">Complete</string>
    <string name="assigned">Assigned</string>
    <string name="available">Available</string>
    <string name="home">Home</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="create">Create</string>
    <string name="welcome">Welcome!</string>

</resources>
